# holo_fill

./: .gitignore  README.md  package-lock.json  pyproject.toml  setup.sh
.cursor/rules/: accessibility.mdc  code-review.mdc  code-style.mdc  communication.mdc  dependencies.mdc  documentation.mdc  error-handling.mdc  file-organization.mdc  git-workflow.mdc  performance.mdc  project-overview.mdc  responsive-design.md  security.mdc  testing.mdc
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: __init__.py  config.py  exceptions.py  utils.py
backend/app/models/: __init__.py  image.py
backend/app/prompts/: describe_image.txt  generate_threejs_html.txt  generate_threejs_html_simple.txt  generate_threejs_html_v1.txt
backend/app/services/: __init__.py  image_service.py  openai_service.py
frontend/: jest.config.js  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx
frontend/src/__mocks__/: three.ts
frontend/src/components/: ErrorToast.tsx  LoadingOverlay.tsx  PreviewSection.tsx  ResultsSection.tsx  ThreejsViewer.tsx  UploadSection.tsx  index.ts
frontend/src/components/__tests__/: ErrorToast.test.tsx  LoadingOverlay.test.tsx
frontend/src/hooks/: index.ts  useImageAnalysis.ts  useImageUpload.ts
tests/: __init__.py  test_main.py
